:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/bs_ba.json
+++ b/assets/minecraft/lang/bs_ba.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Borba",
     "itemGroup.decorations": "\u00a77Dekorativni blokovi",
     "itemGroup.food": "\u00a77Namirnice",
-    "itemGroup.hotbar": "\u00a77Sa\u010duvani hotbar-i",
+    "itemGroup.hotbar": "\u00a77Sa\u010duvani hotbari",
     "itemGroup.inventory": "\u00a77Inventar za pre\u017eivljavanje",
     "itemGroup.materials": "\u00a77Materijali",
     "itemGroup.misc": "\u00a77Razno",
