--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -65,18 +65,18 @@
     "entity.minecraft.zombie_horse": "\u00a77Undead brumby",
     "gui.advancements": "\u00a7fAccomplishments",
     "itemGroup.brewing": "\u00a77Distilling",
-    "itemGroup.buildingBlocks": "\u00a77Yer' Construction Blocks",
+    "itemGroup.buildingBlocks": "\u00a77Construction blocks",
     "itemGroup.combat": "\u00a77Weapons",
-    "itemGroup.decorations": "\u00a77Beauty Blocks",
+    "itemGroup.decorations": "\u00a77Beauty blocks",
     "itemGroup.food": "\u00a77Grub",
     "itemGroup.hotbar": "\u00a77Saved pockets for ya tools",
     "itemGroup.inventory": "\u00a77Swashbuckler Loot",
     "itemGroup.materials": "\u00a77Loot",
     "itemGroup.misc": "\u00a77Others, matey",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Look for booty",
-    "itemGroup.tools": "\u00a77Handy Objects",
-    "itemGroup.transportation": "\u00a77Fancy Travel",
+    "itemGroup.search": "\u00a77Search loot",
+    "itemGroup.tools": "\u00a77Handy objects",
+    "itemGroup.transportation": "\u00a77Fancy travel",
     "merchant.level.1": "\u00a77Novice",
     "merchant.level.2": "\u00a77Steward",
     "merchant.level.3": "\u00a77Bo's'un",
