--- a/assets/minecraft/lang/se_no.json
+++ b/assets/minecraft/lang/se_no.json
@@ -31,7 +31,7 @@
     "container.enderchest": "\u00a77Endorbumb\u00e1",
     "container.furnace": "\u00a77Ovdna",
     "container.grindstone_title": "\u00a77Divo & sihko noidosa",
-    "container.hopper": "\u00a77D\u00e1vvirnjaman",
+    "container.hopper": "\u00a77D\u00e1vvirnjammi",
     "container.inventory": "\u00a77D\u00e1vvirvuork\u00e1",
     "container.lectern": "\u00a77Lohkanbeavdi",
     "container.loom": "\u00a77Go\u0111\u0111i",
