--- a/assets/minecraft/lang/swg.json
+++ b/assets/minecraft/lang/swg.json
@@ -2,13 +2,13 @@
     "block.minecraft.black_shulker_box": "\u00a77Schvarzr Kapslarkaschda",
     "block.minecraft.blue_shulker_box": "\u00a77Blaur Kapslarkaschda",
     "block.minecraft.brown_shulker_box": "\u00a77Braunr Kapslarkaschda",
-    "block.minecraft.cyan_shulker_box": "\u00a77Dirkisr Kapslarkaschda",
+    "block.minecraft.cyan_shulker_box": "\u00a77Blaugreanr Kapslarkaschda",
     "block.minecraft.gray_shulker_box": "\u00a77Graur Kapslarkaschda",
     "block.minecraft.green_shulker_box": "\u00a77Greanr Kapslarkaschda",
     "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaur Kapslarkaschda",
     "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraur Kapslarkaschda",
     "block.minecraft.lime_shulker_box": "\u00a77Hellgreanr Kapslarkaschda",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magentanr Kapslarkaschda",
+    "block.minecraft.magenta_shulker_box": "\u00a77Rosaroatr Kapslarkaschda",
     "block.minecraft.orange_shulker_box": "\u00a77Or\u00e5schanr Kapslarkaschda",
     "block.minecraft.pink_shulker_box": "\u00a77Rosanr Kapslarkaschda",
     "block.minecraft.purple_shulker_box": "\u00a77Lillanr Kapslarkaschda",
@@ -34,7 +34,7 @@
     "container.hopper": "\u00a77Trichter",
     "container.inventory": "\u00a77Inventar",
     "container.lectern": "\u00a77Lesepult",
-    "container.loom": "\u00a77Vebschduahl",
+    "container.loom": "\u00a77Vebschdual",
     "container.repair": "\u00a77Reparieren & Benennen",
     "container.shulkerBox": "\u00a77Shulkerkiste",
     "container.smoker": "\u00a77R\u00e4ucherofen",
@@ -45,7 +45,7 @@
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muli",
     "entity.minecraft.skeleton_horse": "\u00a77Schgelettros",
-    "entity.minecraft.villager": "\u00a77Dearflar",
+    "entity.minecraft.villager": "\u00a77Derflar",
     "entity.minecraft.villager.armorer": "\u00a77Banzrm\u00e5chr",
     "entity.minecraft.villager.butcher": "\u00a77Metzgr",
     "entity.minecraft.villager.cartographer": "\u00a77Kartograf",
@@ -57,13 +57,13 @@
     "entity.minecraft.villager.librarian": "\u00a77Biacheraim\u00e5",
     "entity.minecraft.villager.mason": "\u00a77Maurar",
     "entity.minecraft.villager.nitwit": "\u00a77Seckl",
-    "entity.minecraft.villager.none": "\u00a77Dearflar",
+    "entity.minecraft.villager.none": "\u00a77Derflar",
     "entity.minecraft.villager.shepherd": "\u00a77Sch\u00e4fr",
     "entity.minecraft.villager.toolsmith": "\u00a77Grobschmid",
     "entity.minecraft.villager.weaponsmith": "\u00a77Vaffaschmid",
     "entity.minecraft.wandering_trader": "\u00a77Fahrender H\u00e4ndler",
     "entity.minecraft.zombie_horse": "\u00a77Zombiros",
-    "gui.advancements": "\u00a7fFortschritt",
+    "gui.advancements": "\u00a7fFortschritte",
     "itemGroup.brewing": "\u00a77Braua",
     "itemGroup.buildingBlocks": "\u00a77Bauzuig",
     "itemGroup.combat": "\u00a77Kampf",
