--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -8,14 +8,14 @@
     "block.minecraft.light_blue_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0627\u0628\u06cc \u06a9\u0645\u0631\u0646\u06af \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.light_gray_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0646\u0642\u0631\u0647 \u0627\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.lime_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0628\u0632 \u06a9\u0645\u0631\u0646\u06af \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.magenta_shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0635\u062f\u0641\u06cc \u0627\u0631\u063a\u0648\u0627\u0646\u06cc",
+    "block.minecraft.magenta_shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0634\u0627\u0644\u06a9\u0631 \u0627\u0631\u063a\u0648\u0627\u0646\u06cc",
     "block.minecraft.orange_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0646\u0627\u0631\u0646\u062c\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.pink_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0635\u0648\u0631\u062a\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.purple_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0628\u0646\u0641\u0634 \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.red_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0642\u0631\u0645\u0632 \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.white_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0641\u06cc\u062f \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.yellow_shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0635\u062f\u0641\u06cc \u0632\u0631\u062f",
+    "block.minecraft.yellow_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0632\u0631\u062f \u0634\u0627\u0644\u06a9\u0631",
     "container.barrel": "\u00a77\u0628\u0634\u06a9\u0647",
     "container.beacon": "\u00a77\u0646\u0634\u0627\u0646 \u0641\u0631\u0633\u062a",
     "container.blast_furnace": "\u00a77\u06a9\u0648\u0631\u0647 \u0630\u0648\u0628 \u06a9\u0631\u062f\u0646",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77\u06a9\u0648\u0644\u0647 \u06cc \u062d\u0627\u0644\u062a \u0628\u0642\u0627",
     "itemGroup.materials": "\u00a77\u0645\u0648\u0627\u062f \u0648 \u0645\u0635\u0627\u0644\u062d",
     "itemGroup.misc": "\u00a77\u0633\u0627\u06cc\u0631 \u0645\u0648\u0627\u0631\u062f",
-    "itemGroup.redstone": "\u00a77\u0633\u0646\u06af \u0633\u0631\u062e",
+    "itemGroup.redstone": "\u00a77\u0631\u0650\u062f\u0650\u0633\u062a\u0648\u0646",
     "itemGroup.search": "\u00a77\u062c\u0633\u062a\u062c\u0648",
     "itemGroup.tools": "\u00a77\u0627\u0628\u0632\u0627\u0631 \u0647\u0627",
     "itemGroup.transportation": "\u00a77\u062d\u0645\u0644 \u0648 \u0646\u0642\u0644",
