:globe_with_meridians: Update lang files to 1.17.1

--- a/assets/minecraft/lang/de_at.json
+++ b/assets/minecraft/lang/de_at.json
@@ -81,6 +81,6 @@
     "merchant.level.2": "\u00a77Lehrling",
     "merchant.level.3": "\u00a77Gsell",
     "merchant.level.4": "\u00a77Expert",
-    "merchant.level.5": "\u00a77Meista",
+    "merchant.level.5": "\u00a77Moasta",
     "merchant.trades": "\u00a77Ongebote"
 }
