--- a/assets/minecraft/lang/enp.json
+++ b/assets/minecraft/lang/enp.json
@@ -65,9 +65,9 @@
     "entity.minecraft.zombie_horse": "\u00a77Undead Horse",
     "gui.advancements": "\u00a7fForthsteps",
     "itemGroup.brewing": "\u00a77Brewing",
-    "itemGroup.buildingBlocks": "\u00a77Building Blocks",
+    "itemGroup.buildingBlocks": "\u00a77Building Cleats",
     "itemGroup.combat": "\u00a77Fighting",
-    "itemGroup.decorations": "\u00a77Bedeckledge Blocks",
+    "itemGroup.decorations": "\u00a77Bedeckledge Cleats",
     "itemGroup.food": "\u00a77Foodstuffs",
     "itemGroup.hotbar": "\u00a77Kept Hotbands",
     "itemGroup.inventory": "\u00a77Overlive Inholding",
