--- a/assets/minecraft/lang/ga_ie.json
+++ b/assets/minecraft/lang/ga_ie.json
@@ -61,7 +61,7 @@
     "entity.minecraft.villager.shepherd": "\u00a77Aoire",
     "entity.minecraft.villager.toolsmith": "\u00a77Gabha Uirlis\u00ed",
     "entity.minecraft.villager.weaponsmith": "\u00a77Gabha Arm",
-    "entity.minecraft.wandering_trader": "\u00a77Tr\u00e1d\u00e1la\u00ed F\u00e1na\u00edochta",
+    "entity.minecraft.wandering_trader": "\u00a77Tr\u00e1d\u00e1la\u00ed F\u00e1nach",
     "entity.minecraft.zombie_horse": "\u00a77Capall Zomba\u00ed",
     "gui.advancements": "\u00a7fForbairt\u00ed",
     "itemGroup.brewing": "\u00a77Gr\u00fadaireacht",
