--- a/assets/minecraft/lang/gl_es.json
+++ b/assets/minecraft/lang/gl_es.json
@@ -22,7 +22,7 @@
     "container.brewing": "\u00a77Destilador",
     "container.cartography_table": "\u00a77Mesa de cartograf\u00eda",
     "container.chest": "\u00a77Cofre",
-    "container.chestDouble": "\u00a77Cofre dobre",
+    "container.chestDouble": "\u00a77Cofre grande",
     "container.crafting": "\u00a77Fabricaci\u00f3n",
     "container.creative": "\u00a77Selecci\u00f3n de obxectos",
     "container.dispenser": "\u00a77Dispensador",
