--- a/assets/minecraft/lang/haw_us.json
+++ b/assets/minecraft/lang/haw_us.json
@@ -64,8 +64,19 @@
     "entity.minecraft.wandering_trader": "\u00a77Mea Kalepa holoholo",
     "entity.minecraft.zombie_horse": "\u00a77Huaka\u02bbi p\u014d lio",
     "gui.advancements": "\u00a7f\u02bbO n\u0101 holomua",
+    "itemGroup.brewing": "\u00a77Ho\u02bbol\u0101l\u0101",
+    "itemGroup.buildingBlocks": "\u00a77N\u0101 palaka hale",
+    "itemGroup.combat": "\u00a77Hakak\u0101",
+    "itemGroup.decorations": "\u00a77N\u0101 Pihi ho\u02bbonaninani",
+    "itemGroup.food": "\u00a77N\u0101 mea \u02bbai",
     "itemGroup.hotbar": "\u00a77N\u0101 Hotbars i M\u0101lama \u02bbia",
     "itemGroup.inventory": "\u00a77Inventory Ola",
+    "itemGroup.materials": "\u00a77N\u0101 Pono Hana",
+    "itemGroup.misc": "\u00a77N\u0101 Mea Like \u02bbole",
+    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.search": "\u00a77N\u0101 Mea Huli",
+    "itemGroup.tools": "\u00a77N\u0101 Mea Hana",
+    "itemGroup.transportation": "\u00a77Ka\u02bba",
     "merchant.level.1": "\u00a77\u02bbO Novice",
     "merchant.level.2": "\u00a77Kumu",
     "merchant.level.3": "\u00a77Hele",
