--- a/assets/minecraft/lang/hi_in.json
+++ b/assets/minecraft/lang/hi_in.json
@@ -61,12 +61,12 @@
     "entity.minecraft.villager.shepherd": "\u00a77\u0917\u0921\u093c\u0930\u093f\u092f\u093e",
     "entity.minecraft.villager.toolsmith": "\u00a77\u0909\u092a\u0915\u0930\u0923 \u0915\u093e \u0932\u094b\u0939\u093e\u0930",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u0939\u0925\u093f\u092f\u093e\u0930 \u0915\u093e \u0932\u094b\u0939\u093e\u0930",
-    "entity.minecraft.wandering_trader": "\u00a77\u092d\u091f\u0915\u0928\u0947\u0935\u093e\u0932\u093e \u0935\u094d\u092f\u093e\u092a\u093e\u0930\u0940",
-    "entity.minecraft.zombie_horse": "\u00a77\u091c\u093c\u094b\u0902\u092c\u0940 \u0939\u093e\u0930\u094d\u0938",
+    "entity.minecraft.wandering_trader": "\u00a77\u092a\u0930\u094d\u092f\u091f\u0915 \u0935\u094d\u092f\u093e\u092a\u093e\u0930\u0940",
+    "entity.minecraft.zombie_horse": "\u00a77\u091c\u0949\u092e\u094d\u092c\u0940 \u0918\u094b\u0921\u093c\u093e",
     "gui.advancements": "\u00a7f\u0909\u0928\u094d\u0928\u0924\u093f",
     "itemGroup.brewing": "\u00a77\u092e\u0926\u093f\u0930\u093e \u092c\u0928\u093e\u0928\u093e",
     "itemGroup.buildingBlocks": "\u00a77\u092c\u093f\u0932\u094d\u0921\u093f\u0902\u0917 \u092c\u094d\u0932\u0949\u0915\u094d\u0938",
-    "itemGroup.combat": "\u00a77\u0915\u093e \u092e\u0941\u0915\u093e\u092c\u0932\u093e",
+    "itemGroup.combat": "\u00a77\u0932\u0921\u093c\u093e\u0908",
     "itemGroup.decorations": "\u00a77\u0938\u091c\u093e\u0935\u091f \u092c\u094d\u0932\u0949\u0915",
     "itemGroup.food": "\u00a77\u0916\u093e\u0926\u094d\u092f \u092a\u0926\u093e\u0930\u094d\u0925",
     "itemGroup.hotbar": "\u00a77\u0938\u0939\u0947\u091c \u0917\u090f \u0909\u092a\u0915\u0930\u0923\u092a\u091f\u094d\u091f\u093f\u092f\u093e\u0901",
