--- a/assets/minecraft/lang/io_en.json
+++ b/assets/minecraft/lang/io_en.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Nigra buxo di Shulker",
-    "block.minecraft.blue_shulker_box": "\u00a77Blua buxo di Shulker",
-    "block.minecraft.brown_shulker_box": "\u00a77Bruna buxo di Shulker",
-    "block.minecraft.cyan_shulker_box": "\u00a77Cyana buxo di Shulker",
-    "block.minecraft.gray_shulker_box": "\u00a77Griza buxo di Shulker",
-    "block.minecraft.green_shulker_box": "\u00a77Verda buxo di Shulker",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Cielblua buxo di Shulker",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Klargriza buxo di Shulker",
-    "block.minecraft.lime_shulker_box": "\u00a77Klarverda buxo di Shulker",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta buxo di Shulker",
-    "block.minecraft.orange_shulker_box": "\u00a77Oranjea buxo di Shulker",
-    "block.minecraft.pink_shulker_box": "\u00a77Rozea buxo di Shulker",
-    "block.minecraft.purple_shulker_box": "\u00a77Purpura buxo di Shulker",
-    "block.minecraft.red_shulker_box": "\u00a77Reda buxo di Shulker",
-    "block.minecraft.shulker_box": "\u00a77Buxo di Shulker",
-    "block.minecraft.white_shulker_box": "\u00a77Blanka buxo di Shulker",
-    "block.minecraft.yellow_shulker_box": "\u00a77Flava buxo di Shulker",
+    "block.minecraft.black_shulker_box": "\u00a77Nigra buxo di Shulkero",
+    "block.minecraft.blue_shulker_box": "\u00a77Blua buxo di Shulkero",
+    "block.minecraft.brown_shulker_box": "\u00a77Bruna buxo di Shulkero",
+    "block.minecraft.cyan_shulker_box": "\u00a77Cyana buxo di Shulkero",
+    "block.minecraft.gray_shulker_box": "\u00a77Griza buxo di Shulkero",
+    "block.minecraft.green_shulker_box": "\u00a77Verda buxo di Shulkero",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Cielblua buxo di Shulkero",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Klargriza buxo di Shulkero",
+    "block.minecraft.lime_shulker_box": "\u00a77Klarverda buxo di Shulkero",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta buxo di Shulkero",
+    "block.minecraft.orange_shulker_box": "\u00a77Oranjea buxo di Shulkero",
+    "block.minecraft.pink_shulker_box": "\u00a77Rozea buxo di Shulkero",
+    "block.minecraft.purple_shulker_box": "\u00a77Purpura buxo di Shulkero",
+    "block.minecraft.red_shulker_box": "\u00a77Reda buxo di Shulkero",
+    "block.minecraft.shulker_box": "\u00a77Buxo di Shulkero",
+    "block.minecraft.white_shulker_box": "\u00a77Blanka buxo di Shulkero",
+    "block.minecraft.yellow_shulker_box": "\u00a77Flava buxo di Shulkero",
     "container.barrel": "\u00a77Barelo",
     "container.beacon": "\u00a77Baliso",
     "container.blast_furnace": "\u00a77Fornego",
