--- a/assets/minecraft/lang/la_la.json
+++ b/assets/minecraft/lang/la_la.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Nigra Capsa Concheri",
-    "block.minecraft.blue_shulker_box": "\u00a77Cerulea Capsa Concheri",
-    "block.minecraft.brown_shulker_box": "\u00a77Brunnea Capsa Concheri",
-    "block.minecraft.cyan_shulker_box": "\u00a77Cyanea Capsa Concheri",
-    "block.minecraft.gray_shulker_box": "\u00a77Cinerea Capsa Concheri",
-    "block.minecraft.green_shulker_box": "\u00a77Viridis Capsa Concheri",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Aeria Capsa Concheri",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Cana Capsa Concheri",
-    "block.minecraft.lime_shulker_box": "\u00a77Prasina Capsa Concheri",
+    "block.minecraft.black_shulker_box": "\u00a77Nigra capsa concheri",
+    "block.minecraft.blue_shulker_box": "\u00a77Cerulea capsa concheri",
+    "block.minecraft.brown_shulker_box": "\u00a77Brunnea capsa concheri",
+    "block.minecraft.cyan_shulker_box": "\u00a77Cyanea capsa concheri",
+    "block.minecraft.gray_shulker_box": "\u00a77Cinerea capsa concheri",
+    "block.minecraft.green_shulker_box": "\u00a77Viridis capsa concheri",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Aeria capsa concheri",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Cana capsa concheri",
+    "block.minecraft.lime_shulker_box": "\u00a77Prasina capsa concheri",
     "block.minecraft.magenta_shulker_box": "\u00a77Rubropurpurea capsa concheri",
-    "block.minecraft.orange_shulker_box": "\u00a77Aranta Capsa Concheri",
-    "block.minecraft.pink_shulker_box": "\u00a77Rosea Capsa Concheri",
-    "block.minecraft.purple_shulker_box": "\u00a77Purpurea Capsa Concheri",
-    "block.minecraft.red_shulker_box": "\u00a77Rutila Capsa Concheri",
-    "block.minecraft.shulker_box": "\u00a77Capsa Concheri",
-    "block.minecraft.white_shulker_box": "\u00a77Alba Capsa Concheri",
-    "block.minecraft.yellow_shulker_box": "\u00a77Flava Capsa Concheri",
+    "block.minecraft.orange_shulker_box": "\u00a77Aurantia capsa concheri",
+    "block.minecraft.pink_shulker_box": "\u00a77Rosea capsa concheri",
+    "block.minecraft.purple_shulker_box": "\u00a77Purpurea capsa concheri",
+    "block.minecraft.red_shulker_box": "\u00a77Rubra capsa concheri",
+    "block.minecraft.shulker_box": "\u00a77Capsa concheri",
+    "block.minecraft.white_shulker_box": "\u00a77Alba capsa concheri",
+    "block.minecraft.yellow_shulker_box": "\u00a77Flava capsa concheri",
     "container.barrel": "\u00a77Cupa",
     "container.beacon": "\u00a77Radiator",
     "container.blast_furnace": "\u00a77Caminus",
@@ -24,19 +24,19 @@
     "container.chest": "\u00a77Cista",
     "container.chestDouble": "\u00a77Cista Magna",
     "container.crafting": "\u00a77Fabricatio",
-    "container.creative": "\u00a77Electio Reris",
+    "container.creative": "\u00a77Electio rerum",
     "container.dispenser": "\u00a77proiciens",
     "container.dropper": "\u00a77Demittetrum",
     "container.enchant": "\u00a77Incanta",
     "container.enderchest": "\u00a77Cista Finalis",
     "container.furnace": "\u00a77Fornax",
-    "container.grindstone_title": "\u00a77Reficere Delustrareque",
+    "container.grindstone_title": "\u00a77Reficere et delustrare",
     "container.hopper": "\u00a77Infundibulum rerum",
     "container.inventory": "\u00a77Inventarium",
     "container.lectern": "\u00a77Lectrum",
     "container.loom": "\u00a77Tela",
     "container.repair": "\u00a77Reparare et nominare",
-    "container.shulkerBox": "\u00a77Capsa Concheri",
+    "container.shulkerBox": "\u00a77Capsa concheri",
     "container.smoker": "\u00a77Fumigator",
     "container.stonecutter": "\u00a77Saxumsecator",
     "container.upgrade": "\u00a77Meliora res",
@@ -70,7 +70,7 @@
     "itemGroup.decorations": "\u00a77Materiae ornamentorum",
     "itemGroup.food": "\u00a77Cibi",
     "itemGroup.hotbar": "\u00a77Res vectis servata",
-    "itemGroup.inventory": "\u00a77Inventarium Sustinentiae",
+    "itemGroup.inventory": "\u00a77Inventarium supervivendi",
     "itemGroup.materials": "\u00a77Materiae",
     "itemGroup.misc": "\u00a77Miscellaneus",
     "itemGroup.redstone": "\u00a77Rubrolapis",
