--- a/assets/minecraft/lang/qya_aa.json
+++ b/assets/minecraft/lang/qya_aa.json
@@ -18,14 +18,14 @@
     "block.minecraft.yellow_shulker_box": "\u00a77Malina colca Hyulcero",
     "container.blast_furnace": "\u00a77Ticutait\u00eb urna",
     "container.chest": "\u00a77Taucolca",
-    "container.chestDouble": "\u00a77Hoa Taucolca",
+    "container.chestDouble": "\u00a77Hoa taucolca",
     "container.crafting": "\u00a77Tami\u00eb",
-    "container.creative": "\u00a77Cilm\u00eb Natwa",
+    "container.creative": "\u00a77Cili\u00eb nation",
     "container.enchant": "\u00a77Luhta",
     "container.enderchest": "\u00a77Taucolca Endeva",
     "container.furnace": "\u00a77Urna",
     "container.inventory": "\u00a77Auri\u00eb",
-    "container.repair": "\u00a77Envinyata ar anta aness\u00eb",
+    "container.repair": "\u00a77Envinyata ar esta",
     "container.shulkerBox": "\u00a77Colca Hyulcero",
     "entity.minecraft.chest_minecart": "\u00a77Rax' as taucolca",
     "entity.minecraft.horse": "\u00a77Rocco",
@@ -37,7 +37,7 @@
     "entity.minecraft.villager.cleric": "\u00a77Cordamo",
     "entity.minecraft.villager.farmer": "\u00a77Cemendur",
     "entity.minecraft.villager.fisherman": "\u00a77Lingwimo",
-    "entity.minecraft.villager.fletcher": "\u00a77Pilintano",
+    "entity.minecraft.villager.fletcher": "\u00a77Pilintan",
     "entity.minecraft.villager.leatherworker": "\u00a77Alumo",
     "entity.minecraft.villager.librarian": "\u00a77Parmasson",
     "entity.minecraft.villager.mason": "\u00a77Ontamo",
@@ -45,15 +45,15 @@
     "entity.minecraft.villager.shepherd": "\u00a77M\u00e1mandil",
     "entity.minecraft.villager.toolsmith": "\u00a77Carmatan",
     "entity.minecraft.villager.weaponsmith": "\u00a77Maicatan",
-    "entity.minecraft.zombie_horse": "\u00a77Urcoya Rocco",
+    "entity.minecraft.zombie_horse": "\u00a77Urcoya rocco",
     "itemGroup.brewing": "\u00a77\u00d3quantal\u00eb",
-    "itemGroup.buildingBlocks": "\u00a77Ronwar Carastal\u00ebo",
+    "itemGroup.buildingBlocks": "\u00a77Ronwar carastal\u00ebo",
     "itemGroup.combat": "\u00a77Mahti\u00eb",
-    "itemGroup.decorations": "\u00a77Ronwar Fintass\u00ebo",
+    "itemGroup.decorations": "\u00a77Ronwar fintass\u00ebo",
     "itemGroup.food": "\u00a77Matta",
     "itemGroup.hotbar": "\u00a77Renin\u00eb fert\u00e9mar",
     "itemGroup.inventory": "\u00a77Auri\u00eb",
-    "itemGroup.materials": "\u00a77Talmermali",
+    "itemGroup.materials": "\u00a77Ermar",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Saca Nati",
     "itemGroup.tools": "\u00a77Tammar",
