--- a/assets/minecraft/lang/th_th.json
+++ b/assets/minecraft/lang/th_th.json
@@ -82,5 +82,5 @@
     "merchant.level.3": "\u00a77\u0e1c\u0e39\u0e49\u0e0a\u0e33\u0e19\u0e32\u0e0d\u0e07\u0e32\u0e19",
     "merchant.level.4": "\u00a77\u0e1c\u0e39\u0e49\u0e40\u0e0a\u0e35\u0e48\u0e22\u0e27\u0e0a\u0e32\u0e0d",
     "merchant.level.5": "\u00a77\u0e40\u0e08\u0e49\u0e32\u0e19\u0e32\u0e22",
-    "merchant.trades": "\u00a77\u0e01\u0e32\u0e23\u0e41\u0e25\u0e01\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19"
+    "merchant.trades": "\u00a77\u0e01\u0e32\u0e23\u0e04\u0e49\u0e32\u0e02\u0e32\u0e22"
 }
