--- a/assets/minecraft/lang/tl_ph.json
+++ b/assets/minecraft/lang/tl_ph.json
@@ -27,10 +27,10 @@
     "container.creative": "\u00a77Pagpipilian",
     "container.dispenser": "\u00a77Tagabigay",
     "container.dropper": "\u00a77Taga-hulog",
-    "container.enchant": "\u00a77Gayuma",
+    "container.enchant": "\u00a77Pagrarahuyo",
     "container.enderchest": "\u00a77Baul ng Ender",
     "container.furnace": "\u00a77Pugon",
-    "container.grindstone_title": "\u00a77Ayusin & Itanggal ang mahika",
+    "container.grindstone_title": "\u00a77Ayusin & Itanggal-Rahuyo",
     "container.hopper": "\u00a77Lukton",
     "container.inventory": "\u00a77Imbentaryo",
     "container.lectern": "\u00a77Patungan ng Libro",
