--- a/assets/minecraft/lang/ar_sa.json
+++ b/assets/minecraft/lang/ar_sa.json
@@ -2,10 +2,10 @@
     "block.minecraft.black_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0623\u0633\u0648\u062f",
     "block.minecraft.blue_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0623\u0632\u0631\u0642",
     "block.minecraft.brown_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0628\u0646\u064a",
-    "block.minecraft.cyan_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0633\u0645\u0627\u0648\u064a \u063a\u0627\u0645\u0642",
+    "block.minecraft.cyan_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0633\u0645\u0627\u0648\u064a",
     "block.minecraft.gray_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0631\u0645\u0627\u062f\u064a",
     "block.minecraft.green_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0623\u062e\u0636\u0631",
-    "block.minecraft.light_blue_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0633\u0645\u0627\u0648\u064a",
+    "block.minecraft.light_blue_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0623\u0632\u0631\u0642 \u0641\u0627\u062a\u062d",
     "block.minecraft.light_gray_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0631\u0645\u0627\u062f\u064a \u0641\u0627\u062a\u062d",
     "block.minecraft.lime_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0644\u064a\u0645\u0648\u0646\u064a",
     "block.minecraft.magenta_shulker_box": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0634\u0644\u0643\u0631 \u0623\u0631\u062c\u0648\u0627\u0646\u064a",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77\u0623\u0633\u0644\u062d\u0629",
     "itemGroup.decorations": "\u00a77\u0643\u062a\u0644 \u0627\u0644\u0632\u064a\u0646\u0629",
     "itemGroup.food": "\u00a77\u063a\u0630\u0627\u0621",
-    "itemGroup.hotbar": "\u00a77\u0623\u0634\u0631\u0637\u0629 \u0627\u0644\u0623\u062f\u0648\u0627\u062a \u0627\u0644\u0645\u062d\u0641\u0648\u0638\u0629",
+    "itemGroup.hotbar": "\u00a77\u0623\u0634\u0631\u0637\u0629 \u0627\u0644\u0645\u0647\u0627\u0645 \u0627\u0644\u0645\u062d\u0641\u0648\u0638\u0629",
     "itemGroup.inventory": "\u00a77\u062d\u0642\u064a\u0628\u0629 \u0627\u0644\u0628\u0642\u0627\u0621",
     "itemGroup.materials": "\u00a77\u0627\u0644\u0645\u0648\u0627\u062f",
     "itemGroup.misc": "\u00a77\u0645\u062a\u0646\u0648\u0639\u0627\u062a",
@@ -79,7 +79,7 @@
     "itemGroup.transportation": "\u00a77\u0648\u0633\u0627\u0626\u0644 \u0627\u0644\u0646\u0642\u0644",
     "merchant.level.1": "\u00a77\u0645\u0628\u062a\u062f\u0626",
     "merchant.level.2": "\u00a77\u0645\u0628\u062a\u062f\u0626",
-    "merchant.level.3": "\u00a77\u0627\u0644\u062a\u0627\u062c\u0631 \u0627\u0644\u064a\u0648\u0645\u064a",
+    "merchant.level.3": "\u00a77\u0628\u0627\u0631\u0639",
     "merchant.level.4": "\u00a77\u062e\u0628\u064a\u0631",
     "merchant.level.5": "\u00a77\u0631\u0626\u064a\u0633",
     "merchant.trades": "\u00a77\u0627\u0644\u0635\u0641\u0642\u0627\u062a"
