--- a/assets/minecraft/lang/ast_es.json
+++ b/assets/minecraft/lang/ast_es.json
@@ -39,7 +39,6 @@
     "container.shulkerBox": "\u00a77Caxa de shulker",
     "container.smoker": "\u00a77Afumador",
     "container.stonecutter": "\u00a77Cortapiedra",
-    "container.upgrade": "\u00a77Ameyorar equipamientu",
     "entity.minecraft.chest_minecart": "\u00a77Vagoneta con un bagul",
     "entity.minecraft.horse": "\u00a77Caballu",
     "entity.minecraft.llama": "\u00a77Llama",
@@ -69,12 +68,11 @@
     "itemGroup.combat": "\u00a77Engarradiella",
     "itemGroup.decorations": "\u00a77Bloques de decoraci\u00f3n",
     "itemGroup.food": "\u00a77Comida",
-    "itemGroup.hotbar": "\u00a77Barres d'oxetos guardaes",
     "itemGroup.inventory": "\u00a77Inventariu de sobrevivencia",
     "itemGroup.materials": "\u00a77Materiales",
     "itemGroup.misc": "\u00a77Miscel\u00e1nea",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Busca:",
+    "itemGroup.search": "\u00a77Gueta",
     "itemGroup.tools": "\u00a77Preseos",
     "itemGroup.transportation": "\u00a77Tresporte",
     "merchant.level.1": "\u00a77Novatu",
