--- a/assets/minecraft/lang/ca_es.json
+++ b/assets/minecraft/lang/ca_es.json
@@ -13,7 +13,7 @@
     "block.minecraft.pink_shulker_box": "\u00a77Caixa de shulker rosa",
     "block.minecraft.purple_shulker_box": "\u00a77Caixa de shulker lila",
     "block.minecraft.red_shulker_box": "\u00a77Caixa de shulker vermella",
-    "block.minecraft.shulker_box": "\u00a77Caixa de Shulker",
+    "block.minecraft.shulker_box": "\u00a77Caixa de shulker",
     "block.minecraft.white_shulker_box": "\u00a77Caixa de shulker blanca",
     "block.minecraft.yellow_shulker_box": "\u00a77Caixa de shulker groga",
     "container.barrel": "\u00a77Barril",
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77Dispensador",
     "container.dropper": "\u00a77Subministrador",
     "container.enchant": "\u00a77Encantar",
-    "container.enderchest": "\u00a77Cofre d'ender",
+    "container.enderchest": "\u00a77Cofre d'Ender",
     "container.furnace": "\u00a77Forn",
     "container.grindstone_title": "\u00a77Reparar i desencantar",
     "container.hopper": "\u00a77Tremuja d'\u00edtems",
@@ -38,7 +38,7 @@
     "container.repair": "\u00a77Reparar i renombrar",
     "container.shulkerBox": "\u00a77Caixa de shulker",
     "container.smoker": "\u00a77Fumador",
-    "container.stonecutter": "\u00a77Tallapedres",
+    "container.stonecutter": "\u00a77Talla-roques",
     "container.upgrade": "\u00a77Millorar l'equipament",
     "entity.minecraft.chest_minecart": "\u00a77Vagoneta amb cofre",
     "entity.minecraft.horse": "\u00a77Cavall",
