--- a/assets/minecraft/lang/el_gr.json
+++ b/assets/minecraft/lang/el_gr.json
@@ -49,7 +49,7 @@
     "entity.minecraft.villager.armorer": "\u00a77A\u03c1\u03bc\u03b1\u03c4\u03bf\u03c0\u03bf\u03b9\u03cc\u03c2",
     "entity.minecraft.villager.butcher": "\u00a77\u03a7\u03b1\u03c3\u03ac\u03c0\u03b7\u03c2",
     "entity.minecraft.villager.cartographer": "\u00a77\u03a7\u03b1\u03c1\u03c4\u03bf\u03b3\u03c1\u03ac\u03c6\u03bf\u03c2",
-    "entity.minecraft.villager.cleric": "\u00a77\u0399\u03b5\u03c1\u03ad\u03b1\u03c2",
+    "entity.minecraft.villager.cleric": "\u00a77\u039a\u03bb\u03b7\u03c1\u03b9\u03ba\u03cc\u03c2",
     "entity.minecraft.villager.farmer": "\u00a77\u0391\u03b3\u03c1\u03cc\u03c4\u03b7\u03c2",
     "entity.minecraft.villager.fisherman": "\u00a77\u03a8\u03b1\u03c1\u03ac\u03c2",
     "entity.minecraft.villager.fletcher": "\u00a77\u039a\u03b1\u03c4\u03b1\u03c3\u03ba\u03b5\u03c5\u03b1\u03c3\u03c4\u03ae\u03c2 \u0392\u03b5\u03bb\u03ce\u03bd",
