--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -5,17 +5,17 @@
     "block.minecraft.cyan_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0641\u06cc\u0631\u0648\u0632\u0647 \u0627\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.gray_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u062e\u0627\u06a9\u0633\u062a\u0631\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.green_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0628\u0632 \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.light_blue_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0627\u0628\u06cc \u06a9\u0645\u0631\u0646\u06af \u0634\u0627\u0644\u06a9\u0631",
+    "block.minecraft.light_blue_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0634\u0627\u0644\u06a9\u0631 \u0622\u0628\u06cc \u0631\u0648\u0634\u0646",
     "block.minecraft.light_gray_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0646\u0642\u0631\u0647 \u0627\u06cc \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.lime_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0628\u0632 \u06a9\u0645\u0631\u0646\u06af \u0634\u0627\u0644\u06a9\u0631",
+    "block.minecraft.lime_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0628\u0632 \u0631\u0648\u0634\u0646 \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.magenta_shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0634\u0627\u0644\u06a9\u0631 \u0627\u0631\u063a\u0648\u0627\u0646\u06cc",
     "block.minecraft.orange_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0646\u0627\u0631\u0646\u062c\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.pink_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0635\u0648\u0631\u062a\u06cc \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.purple_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0628\u0646\u0641\u0634 \u0634\u0627\u0644\u06a9\u0631",
     "block.minecraft.red_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0642\u0631\u0645\u0632 \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0634\u0627\u0644\u06a9\u0631",
+    "block.minecraft.shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0635\u062f\u0641\u06cc",
     "block.minecraft.white_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0633\u0641\u06cc\u062f \u0634\u0627\u0644\u06a9\u0631",
-    "block.minecraft.yellow_shulker_box": "\u00a77\u062c\u0639\u0628\u0647 \u0632\u0631\u062f \u0634\u0627\u0644\u06a9\u0631",
+    "block.minecraft.yellow_shulker_box": "\u00a77\u062c\u0639\u0628\u0647\u200c\u06cc \u0635\u062f\u0641\u06cc \u0632\u0631\u062f",
     "container.barrel": "\u00a77\u0628\u0634\u06a9\u0647",
     "container.beacon": "\u00a77\u0646\u0634\u0627\u0646 \u0641\u0631\u0633\u062a",
     "container.blast_furnace": "\u00a77\u06a9\u0648\u0631\u0647 \u0630\u0648\u0628 \u06a9\u0631\u062f\u0646",
@@ -33,8 +33,8 @@
     "container.grindstone_title": "\u00a77\u062a\u0639\u0645\u06cc\u0631 \u0648 \u0627\u0632 \u0628\u06cc\u0646 \u0628\u0631\u062f\u0646 \u062c\u0627\u062f\u0648",
     "container.hopper": "\u00a77\u0642\u064a\u0641",
     "container.inventory": "\u00a77\u06a9\u0648\u0644\u0647 \u067e\u0634\u062a\u06cc",
-    "container.lectern": "\u00a77\u062a\u0631\u06cc\u0628\u0648\u0646",
-    "container.loom": "\u00a77\u0628\u0644\u0627\u06a9 \u0628\u0627\u0641\u0646\u062f\u06af\u06cc",
+    "container.lectern": "\u00a77\u0645\u06cc\u0632 \u0642\u0631\u0627\u0626\u062a",
+    "container.loom": "\u00a77\u0628\u0644\u0648\u06a9 \u0646\u0633\u0627\u062c\u06cc",
     "container.repair": "\u00a77\u0628\u0627\u0632\u0633\u0627\u0632\u064a / \u0646\u0627\u0645\u06af\u0630\u0627\u0631\u064a",
     "container.shulkerBox": "\u00a77\u062c\u0639\u0628\u0647 \u0634\u0627\u0644\u06a9\u0631",
     "container.smoker": "\u00a77\u0643\u0648\u0631\u0647 \u063a\u0630\u0627",
