--- a/assets/minecraft/lang/hy_am.json
+++ b/assets/minecraft/lang/hy_am.json
@@ -19,18 +19,18 @@
     "container.barrel": "\u00a77\u054f\u0561\u056f\u0561\u057c",
     "container.beacon": "\u00a77\u0553\u0561\u0580\u0578\u057d",
     "container.blast_furnace": "\u00a77\u0540\u0561\u056c\u0574\u0561\u0576 \u057e\u0561\u057c\u0561\u0580\u0561\u0576",
-    "container.brewing": "\u00a77\u0534\u0565\u0572\u0578\u0580\u0561\u0575\u0584\u056b \u054a\u0561\u057f\u0580\u0561\u057d\u057f\u0574\u0561\u0576 \u053f\u0561\u0575\u0561\u0576",
-    "container.cartography_table": "\u00a77\u0554\u0561\u0580\u057f\u0565\u0566\u0561\u0563\u0580\u0578\u0582\u0569\u0575\u0561\u0576 \u0561\u0572\u0575\u0578\u0582\u057d\u0561\u056f",
-    "container.chest": "\u00a77\u054d\u0576\u0564\u0578\u0582\u056f",
-    "container.chestDouble": "\u00a77\u0544\u0565\u056e \u054d\u0576\u0564\u0578\u0582\u056f",
+    "container.brewing": "\u00a77\u0535\u0583\u0574\u0561\u0576 \u053f\u0561\u0575\u0561\u0576",
+    "container.cartography_table": "\u00a77\u0554\u0561\u0580\u057f\u0565\u0566\u0561\u0563\u0580\u0578\u0582\u0569\u0575\u0561\u0576 \u054d\u0565\u0572\u0561\u0576",
+    "container.chest": "\u00a77\u0533\u0561\u0576\u0571\u0561\u0580\u056f\u0572",
+    "container.chestDouble": "\u00a77\u0544\u0565\u056e \u0533\u0561\u0576\u0571\u0561\u0580\u056f\u0572",
     "container.crafting": "\u00a77\u054a\u0561\u057f\u0580\u0561\u057d\u057f\u0578\u0582\u0574",
     "container.creative": "\u00a77\u0531\u057c\u0561\u0580\u056f\u0561\u0575\u056b \u0538\u0576\u057f\u0580\u0578\u0582\u0574",
     "container.dispenser": "\u00a77\u0532\u0561\u056a\u0561\u0576\u056b\u0579",
     "container.dropper": "\u00a77\u0531\u0580\u057f\u0561\u0576\u0565\u057f\u056b\u0579",
     "container.enchant": "\u00a77\u053f\u0561\u056d\u0561\u0580\u0564\u0561\u0576\u0584",
-    "container.enderchest": "\u00a77\u0537\u0576\u0564\u0565\u0580\u056b \u054d\u0576\u0564\u0578\u0582\u056f",
+    "container.enderchest": "\u00a77\u0537\u0576\u0564\u0565\u0580\u056b \u0533\u0561\u0576\u0571\u0561\u0580\u056f\u0572",
     "container.furnace": "\u00a77\u054e\u0561\u057c\u0561\u0580\u0561\u0576",
-    "container.grindstone_title": "\u00a77\u054e\u0565\u0580\u0561\u0576\u0578\u0580\u0578\u0563\u0578\u0582\u0574 \u0565\u0582 \u0566\u0566\u057e\u0561\u0576\u0584",
+    "container.grindstone_title": "\u00a77\u0546\u0578\u0580\u0578\u0563\u0578\u0582\u0574 \u0587 \u0536\u0566\u057e\u0561\u0576\u0584",
     "container.hopper": "\u00a77\u0531\u057c\u0561\u0580\u056f\u0561\u0576\u0565\u0580\u056b \u0541\u0561\u0563\u0561\u0580",
     "container.inventory": "\u00a77\u0533\u0580\u057a\u0561\u0576",
     "container.lectern": "\u00a77\u0531\u0574\u0562\u056b\u0578\u0576",
