--- a/assets/minecraft/lang/ms_my.json
+++ b/assets/minecraft/lang/ms_my.json
@@ -33,7 +33,7 @@
     "container.grindstone_title": "\u00a77Baiki & Nyahsihir",
     "container.hopper": "\u00a77Corong Tuang Item",
     "container.inventory": "\u00a77Inventori",
-    "container.lectern": "\u00a77Meja Syarahan",
+    "container.lectern": "\u00a77Mimbar",
     "container.loom": "\u00a77Alat Tenun",
     "container.repair": "\u00a77Baiki & Namakan",
     "container.shulkerBox": "\u00a77Kotak Shulker",
