--- a/assets/minecraft/lang/rpr.json
+++ b/assets/minecraft/lang/rpr.json
@@ -11,7 +11,7 @@
     "block.minecraft.magenta_shulker_box": "\u00a77\u041f\u0443\u0440\u043f\u0443\u0440\u043d\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
     "block.minecraft.orange_shulker_box": "\u00a77\u041e\u0440\u0430\u043d\u0436\u0435\u0432\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
     "block.minecraft.pink_shulker_box": "\u00a77\u0420\u043e\u0437\u043e\u0432\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
-    "block.minecraft.purple_shulker_box": "\u00a77\u0424\u0456\u043e\u043b\u0435\u0442\u043e\u0432\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a",
+    "block.minecraft.purple_shulker_box": "\u00a77\u0424\u0456\u043e\u043b\u0435\u0442\u043e\u0432\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
     "block.minecraft.red_shulker_box": "\u00a77\u0427\u0435\u0440\u0432\u043e\u043d\u043d\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
     "block.minecraft.shulker_box": "\u00a77\u0428\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
     "block.minecraft.white_shulker_box": "\u00a77\u0411\u0463\u043b\u044b\u0439 \u0448\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a\u044a",
