--- a/assets/minecraft/lang/se_no.json
+++ b/assets/minecraft/lang/se_no.json
@@ -20,7 +20,7 @@
     "container.beacon": "\u00a77V\u00e1rdo\u010duovga",
     "container.blast_furnace": "\u00a77Goardinovdna",
     "container.brewing": "\u00a77Vuo\u0161\u0161ahat",
-    "container.cartography_table": "\u00a77K\u00e1rttenbeavdi",
+    "container.cartography_table": "\u00a77K\u00e1rtenbeavdi",
     "container.chest": "\u00a77Bumb\u00e1",
     "container.chestDouble": "\u00a77Stuora bumb\u00e1",
     "container.crafting": "\u00a77Duddjon",
@@ -37,7 +37,7 @@
     "container.loom": "\u00a77Go\u0111\u0111i",
     "container.repair": "\u00a77Divo & atte nama",
     "container.shulkerBox": "\u00a77Shulkerboksa",
-    "container.smoker": "\u00a77Suovastuhtte",
+    "container.smoker": "\u00a77Suovastahte",
     "container.stonecutter": "\u00a77Gea\u0111geluddejeaddji",
     "container.upgrade": "\u00a77Buoridahtte d\u00e1vviriid",
     "entity.minecraft.chest_minecart": "\u00a77Roggangielk\u00e1 mas bumb\u00e1",
@@ -46,9 +46,9 @@
     "entity.minecraft.mule": "\u00a77Muvla",
     "entity.minecraft.skeleton_horse": "\u00a77D\u00e1kteriggiheasta",
     "entity.minecraft.villager": "\u00a77Gillila\u0161",
-    "entity.minecraft.villager.armorer": "\u00a77Suodjejeaddji",
+    "entity.minecraft.villager.armorer": "\u00a77Suodjalusdahkki",
     "entity.minecraft.villager.butcher": "\u00a77Njuovvi",
-    "entity.minecraft.villager.cartographer": "\u00a77K\u00e1rttadahkki",
+    "entity.minecraft.villager.cartographer": "\u00a77K\u00e1rtadahkki",
     "entity.minecraft.villager.cleric": "\u00a77Vuo\u0161\u0161i",
     "entity.minecraft.villager.farmer": "\u00a77Boanda",
     "entity.minecraft.villager.fisherman": "\u00a77Guollebivdi",
