--- a/assets/minecraft/lang/sr_sp.json
+++ b/assets/minecraft/lang/sr_sp.json
@@ -2,7 +2,7 @@
     "block.minecraft.black_shulker_box": "\u00a77\u0426\u0440\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.blue_shulker_box": "\u00a77\u0422\u0430\u043c\u043d\u043e \u043f\u043b\u0430\u0432\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.brown_shulker_box": "\u00a77\u0411\u0440\u0430\u043e\u043d \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
-    "block.minecraft.cyan_shulker_box": "\u00a77\u0422\u0438\u0440\u043a\u0438\u0437\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
+    "block.minecraft.cyan_shulker_box": "\u00a77\u0426\u0438\u0458\u0430\u043d \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.gray_shulker_box": "\u00a77\u0421\u0438\u0432\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.green_shulker_box": "\u00a77\u0417\u0435\u043b\u0435\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.light_blue_shulker_box": "\u00a77\u0421\u0432\u0435\u0442\u043b\u043e \u043f\u043b\u0430\u0432\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
@@ -13,7 +13,7 @@
     "block.minecraft.pink_shulker_box": "\u00a77\u0420\u043e\u0437\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.purple_shulker_box": "\u00a77\u0409\u0443\u0431\u0438\u0447\u0430\u0441\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.red_shulker_box": "\u00a77\u0426\u0440\u0432\u0435\u043d\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
-    "block.minecraft.shulker_box": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u041a\u0443\u0442\u0438\u0458\u0430",
+    "block.minecraft.shulker_box": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.white_shulker_box": "\u00a77\u0411\u0435\u043b\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.yellow_shulker_box": "\u00a77\u0416\u0443\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "container.barrel": "\u00a77\u0411\u0443\u0440\u0435",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77\u041d\u0430\u0441\u043b\u043e\u043d \u0437\u0430 \u0447\u0438\u0442\u0430\u045a\u0435",
     "container.loom": "\u00a77\u0420\u0430\u0437\u0431\u043e\u0458",
     "container.repair": "\u00a77\u041f\u043e\u043f\u0440\u0430\u0432\u0438 \u0438 \u0438\u043c\u0435\u043d\u0443\u0458",
-    "container.shulkerBox": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u041a\u0443\u0442\u0438\u0458\u0430",
+    "container.shulkerBox": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "container.smoker": "\u00a77\u041f\u0443\u0448\u043d\u0438\u0446\u0430",
     "container.stonecutter": "\u00a77\u0420\u0435\u0437\u0430\u0447 \u043a\u0430\u043c\u0435\u043d\u0430",
     "container.upgrade": "\u00a77\u0423\u043d\u0430\u043f\u0440\u0435\u0434\u0438 \u043e\u043f\u0440\u0435\u043c\u0443",
