--- a/assets/minecraft/lang/uk_ua.json
+++ b/assets/minecraft/lang/uk_ua.json
@@ -35,11 +35,11 @@
     "container.inventory": "\u00a77\u0406\u043d\u0432\u0435\u043d\u0442\u0430\u0440",
     "container.lectern": "\u00a77\u0410\u043d\u0430\u043b\u043e\u0439",
     "container.loom": "\u00a77\u0422\u043a\u0430\u0446\u044c\u043a\u0438\u0439 \u0441\u0442\u0430\u043d\u043e\u043a",
-    "container.repair": "\u00a77\u0420\u0435\u043c\u043e\u043d\u0442 \u0442\u0430 \u043f\u0435\u0440\u0435\u0439\u043c\u0435\u043d\u0443\u0432\u0430\u043d\u043d\u044f",
+    "container.repair": "\u00a77\u0420\u0435\u043c\u043e\u043d\u0442 \u0442\u0430 \u043d\u0430\u0437\u0432\u0430",
     "container.shulkerBox": "\u00a77\u041a\u043e\u0440\u043e\u0431\u043a\u0430 \u0448\u0430\u043b\u043a\u0435\u0440\u0430",
     "container.smoker": "\u00a77\u041a\u043e\u043f\u0442\u0438\u043b\u044c\u043d\u044f",
     "container.stonecutter": "\u00a77\u041a\u0430\u043c\u0435\u043d\u0435\u0440\u0456\u0437",
-    "container.upgrade": "\u00a77\u041f\u043e\u043a\u0440\u0430\u0449\u0438\u0442\u0438 \u0441\u043f\u043e\u0440\u044f\u0434\u0436\u0435\u043d\u043d\u044f",
+    "container.upgrade": "\u00a77\u041f\u043e\u043a\u0440\u0430\u0449\u0438\u0442\u0438",
     "entity.minecraft.chest_minecart": "\u00a77\u0412\u0430\u0433\u043e\u043d\u0435\u0442\u043a\u0430 \u0437\u0456 \u0441\u043a\u0440\u0438\u043d\u0435\u044e",
     "entity.minecraft.horse": "\u00a77\u041a\u0456\u043d\u044c",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
