:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/af_za.json
+++ b/assets/minecraft/lang/af_za.json
@@ -2,7 +2,7 @@
     "block.minecraft.black_shulker_box": "\u00a77Swart Shulker Boks",
     "block.minecraft.blue_shulker_box": "\u00a77Blou Shulker Boks",
     "block.minecraft.brown_shulker_box": "\u00a77Bruin Shulker Boks",
-    "block.minecraft.cyan_shulker_box": "\u00a77Siaan Shulker Boks",
+    "block.minecraft.cyan_shulker_box": "\u00a77Siaan Shulkerboks",
     "block.minecraft.gray_shulker_box": "\u00a77Grys Shulker Boks",
     "block.minecraft.green_shulker_box": "\u00a77Groen Shulker Boks",
     "block.minecraft.light_blue_shulker_box": "\u00a77Ligte Blou Shulker Boks",
