--- a/assets/minecraft/lang/brb.json
+++ b/assets/minecraft/lang/brb.json
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77Shulkerdoos",
     "container.smoker": "\u00a77Roker",
     "container.stonecutter": "\u00a77Steensnijder",
-    "container.upgrade": "\u00a77Uitrusting upgraden",
+    "container.upgrade": "\u00a77U\u00fatrusting upgraden",
     "entity.minecraft.chest_minecart": "\u00a77Mijnkar met kist",
     "entity.minecraft.horse": "\u00a77Paard",
     "entity.minecraft.llama": "\u00a77Lama",
