--- a/assets/minecraft/lang/da_dk.json
+++ b/assets/minecraft/lang/da_dk.json
@@ -10,7 +10,7 @@
     "block.minecraft.lime_shulker_box": "\u00a77Limegr\u00f8n shulker Boks",
     "block.minecraft.magenta_shulker_box": "\u00a77Lyslilla shulker boks",
     "block.minecraft.orange_shulker_box": "\u00a77Orange shulker boks",
-    "block.minecraft.pink_shulker_box": "\u00a77Pink shulker boks",
+    "block.minecraft.pink_shulker_box": "\u00a77Lyser\u00f8d shulker boks",
     "block.minecraft.purple_shulker_box": "\u00a77Lilla shulker boks",
     "block.minecraft.red_shulker_box": "\u00a77R\u00f8d shulker boks",
     "block.minecraft.shulker_box": "\u00a77Shulker boks",
