--- a/assets/minecraft/lang/eu_es.json
+++ b/assets/minecraft/lang/eu_es.json
@@ -30,7 +30,7 @@
     "container.enchant": "\u00a77Sorginkeria",
     "container.enderchest": "\u00a77Enderkutxa",
     "container.furnace": "\u00a77Labea",
-    "container.grindstone_title": "\u00a77Konpontzea eta sorginkeria kentzea",
+    "container.grindstone_title": "\u00a77Konpondu eta sorginkeria kendu",
     "container.hopper": "\u00a77Kalapatxa",
     "container.inventory": "\u00a77Inbentarioa",
     "container.lectern": "\u00a77Argiontzia",
@@ -44,25 +44,25 @@
     "entity.minecraft.horse": "\u00a77Zaldia",
     "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Mandoa",
-    "entity.minecraft.skeleton_horse": "\u00a77Eskeleto zaldia",
+    "entity.minecraft.skeleton_horse": "\u00a77Eskeleto-zaldia",
     "entity.minecraft.villager": "\u00a77Herritarra",
-    "entity.minecraft.villager.armorer": "\u00a77Armagin",
+    "entity.minecraft.villager.armorer": "\u00a77Armadura-errementaria",
     "entity.minecraft.villager.butcher": "\u00a77Harakina",
     "entity.minecraft.villager.cartographer": "\u00a77Kartografoa",
     "entity.minecraft.villager.cleric": "\u00a77Apaiza",
     "entity.minecraft.villager.farmer": "\u00a77Baserritarra",
     "entity.minecraft.villager.fisherman": "\u00a77Arrantzalea",
-    "entity.minecraft.villager.fletcher": "\u00a77Gezi artisaua",
-    "entity.minecraft.villager.leatherworker": "\u00a77Larru artisaua",
+    "entity.minecraft.villager.fletcher": "\u00a77Gezi-artisaua",
+    "entity.minecraft.villager.leatherworker": "\u00a77Larru-artisaua",
     "entity.minecraft.villager.librarian": "\u00a77Liburuzaina",
     "entity.minecraft.villager.mason": "\u00a77Igeltseroa",
     "entity.minecraft.villager.nitwit": "\u00a77Inozoa",
     "entity.minecraft.villager.none": "\u00a77Herritarra",
     "entity.minecraft.villager.shepherd": "\u00a77Artzaina",
-    "entity.minecraft.villager.toolsmith": "\u00a77Errementaria",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Arma errementaria",
+    "entity.minecraft.villager.toolsmith": "\u00a77Tresna-errementaria",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Arma-errementaria",
     "entity.minecraft.wandering_trader": "\u00a77Saltzaile ibiltaria",
-    "entity.minecraft.zombie_horse": "\u00a77Zaldi zonbia",
+    "entity.minecraft.zombie_horse": "\u00a77Zonbi-zaldia",
     "gui.advancements": "\u00a7fAurrerapenak",
     "itemGroup.brewing": "\u00a77Edabeak",
     "itemGroup.buildingBlocks": "\u00a77Eraikuntza blokeak",
