--- a/assets/minecraft/lang/hy_am.json
+++ b/assets/minecraft/lang/hy_am.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77\u0544\u0561\u0580\u057f",
     "itemGroup.decorations": "\u00a77\u0536\u0561\u0580\u0564\u0561\u0580\u0574\u0561\u0576 \u056f\u0561\u057a\u0561\u0576\u0576\u0565\u0580",
     "itemGroup.food": "\u00a77\u054d\u0576\u0578\u0582\u0576\u0564",
-    "itemGroup.hotbar": "\u00a77\u054a\u0561\u0570\u057e\u0561\u056e \u054f\u0561\u0584\u0563\u0578\u057f\u056b\u0576\u0565\u0580",
+    "itemGroup.hotbar": "\u00a77\u054a\u0561\u0570\u057a\u0561\u0576\u0561\u056e \u0563\u0578\u0580\u056e\u056b\u0584\u0576\u0565\u0580",
     "itemGroup.inventory": "\u00a77\u0533\u0578\u0575\u0561\u057f\u0587\u0574\u0561\u0576 \u054a\u0561\u0575\u0578\u0582\u057d\u0561\u056f",
     "itemGroup.materials": "\u00a77\u0546\u0575\u0578\u0582\u0569\u0565\u0580",
     "itemGroup.misc": "\u00a77\u054f\u0561\u0580\u0562\u0565\u0580",
