--- a/assets/minecraft/lang/isv.json
+++ b/assets/minecraft/lang/isv.json
@@ -5,7 +5,7 @@
     "block.minecraft.cyan_shulker_box": "\u00a77Turkysova \u0161alkerova krabka",
     "block.minecraft.gray_shulker_box": "\u00a77Siva \u0161alkerova krabka",
     "block.minecraft.green_shulker_box": "\u00a77Zelena \u0161alkerova krabka",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Jasnomodra \u0161alkerova skrinja",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Sv\u011btlomodra \u0161alkerova skrinja",
     "block.minecraft.light_gray_shulker_box": "\u00a77Jasnosiva \u0161alkerova krabka",
     "block.minecraft.lime_shulker_box": "\u00a77Jasnozelena \u0161alkerova krabka",
     "block.minecraft.magenta_shulker_box": "\u00a77Purpurna \u0161alkerova krabka",
