--- a/assets/minecraft/lang/li_li.json
+++ b/assets/minecraft/lang/li_li.json
@@ -7,7 +7,7 @@
     "block.minecraft.green_shulker_box": "\u00a77Greune Shulker doeas",
     "block.minecraft.light_blue_shulker_box": "\u00a77Licht blauwe Shulker doeas",
     "block.minecraft.light_gray_shulker_box": "\u00a77Licht Grieze Shulker Doeas",
-    "block.minecraft.lime_shulker_box": "\u00a77Ligt Greune Shulker Doeas",
+    "block.minecraft.lime_shulker_box": "\u00a77Limoengreune Shulkerdoes",
     "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulker doeas",
     "block.minecraft.orange_shulker_box": "\u00a77Oranje Shulker doeas",
     "block.minecraft.pink_shulker_box": "\u00a77Roze Shulker doeas",
