--- a/assets/minecraft/lang/nds_de.json
+++ b/assets/minecraft/lang/nds_de.json
@@ -30,12 +30,12 @@
     "container.enchant": "\u00a77Bet\u00f6vern",
     "container.enderchest": "\u00a77Endertruh",
     "container.furnace": "\u00a77Aven",
-    "container.grindstone_title": "\u00a77Utbetern un entwicken",
+    "container.grindstone_title": "\u00a77Pareeren & Entwicken",
     "container.hopper": "\u00a77Tr\u00e4chter",
     "container.inventory": "\u00a77Taske",
     "container.lectern": "\u00a77Leespult",
     "container.loom": "\u00a77Weevstohl",
-    "container.repair": "\u00a77B\u00f6ten & N\u00e4\u00f6men",
+    "container.repair": "\u00a77Pareeren & Naamen",
     "container.shulkerBox": "\u00a77Shulkerkist",
     "container.smoker": "\u00a77R\u00f6kelaven",
     "container.stonecutter": "\u00a77Steensaag",
