--- a/assets/minecraft/lang/nl_be.json
+++ b/assets/minecraft/lang/nl_be.json
@@ -7,7 +7,7 @@
     "block.minecraft.green_shulker_box": "\u00a77Groene Shulkerdoos",
     "block.minecraft.light_blue_shulker_box": "\u00a77Lichtblauwe Shulkerdoos",
     "block.minecraft.light_gray_shulker_box": "\u00a77Lichtgrijze Shulkerdoos",
-    "block.minecraft.lime_shulker_box": "\u00a77Lichtgroene Shulkerdoos",
+    "block.minecraft.lime_shulker_box": "\u00a77Limoengroene shulkerdoos",
     "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerdoos",
     "block.minecraft.orange_shulker_box": "\u00a77Oranje Shulkerdoos",
     "block.minecraft.pink_shulker_box": "\u00a77Roze shulkerdoos",
