--- a/assets/minecraft/lang/pl_pl.json
+++ b/assets/minecraft/lang/pl_pl.json
@@ -23,7 +23,7 @@
     "container.cartography_table": "\u00a77St\u00f3\u0142 kartograficzny",
     "container.chest": "\u00a77Skrzynia",
     "container.chestDouble": "\u00a77Wielka skrzynia",
-    "container.crafting": "\u00a77Konstruowanie",
+    "container.crafting": "\u00a77Wytwarzanie",
     "container.creative": "\u00a77Wyb\u00f3r przedmiotu",
     "container.dispenser": "\u00a77Dozownik",
     "container.dropper": "\u00a77Podajnik",
