--- a/assets/minecraft/lang/sl_si.json
+++ b/assets/minecraft/lang/sl_si.json
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77Shulker skrinja",
     "container.smoker": "\u00a77Prekajevalnik",
     "container.stonecutter": "\u00a77Rezalnik kamna",
-    "container.upgrade": "\u00a77Osve\u017eite opremo",
+    "container.upgrade": "\u00a77Nadgradi opremo",
     "entity.minecraft.chest_minecart": "\u00a77Vozi\u010dek s skrinjo",
     "entity.minecraft.horse": "\u00a77Konj",
     "entity.minecraft.llama": "\u00a77Lama",
