--- a/assets/minecraft/lang/uk_ua.json
+++ b/assets/minecraft/lang/uk_ua.json
@@ -20,7 +20,7 @@
     "container.beacon": "\u00a77\u041c\u0430\u044f\u043a",
     "container.blast_furnace": "\u00a77\u041f\u043b\u0430\u0432\u0438\u043b\u044c\u043d\u0430 \u043f\u0456\u0447",
     "container.brewing": "\u00a77\u0412\u0430\u0440\u0438\u043b\u044c\u043d\u0430 \u0441\u0442\u0456\u0439\u043a\u0430",
-    "container.cartography_table": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444\u0456\u0447\u043d\u0438\u0439 \u0441\u0442\u0456\u043b",
+    "container.cartography_table": "\u00a77\u0421\u0442\u0456\u043b \u043a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444\u0430",
     "container.chest": "\u00a77\u0421\u043a\u0440\u0438\u043d\u044f",
     "container.chestDouble": "\u00a77\u0412\u0435\u043b\u0438\u043a\u0430 \u0441\u043a\u0440\u0438\u043d\u044f",
     "container.crafting": "\u00a77\u041c\u0430\u0439\u0441\u0442\u0440\u0443\u0432\u0430\u043d\u043d\u044f",
@@ -34,7 +34,7 @@
     "container.hopper": "\u00a77\u0412\u043e\u0440\u043e\u043d\u043a\u0430",
     "container.inventory": "\u00a77\u0406\u043d\u0432\u0435\u043d\u0442\u0430\u0440",
     "container.lectern": "\u00a77\u0410\u043d\u0430\u043b\u043e\u0439",
-    "container.loom": "\u00a77\u0422\u043a\u0430\u0446\u044c\u043a\u0438\u0439 \u0441\u0442\u0430\u043d\u043e\u043a",
+    "container.loom": "\u00a77\u0422\u043a\u0430\u0446\u044c\u043a\u0438\u0439 \u0432\u0435\u0440\u0441\u0442\u0430\u0442",
     "container.repair": "\u00a77\u0420\u0435\u043c\u043e\u043d\u0442 \u0442\u0430 \u043d\u0430\u0437\u0432\u0430",
     "container.shulkerBox": "\u00a77\u041a\u043e\u0440\u043e\u0431\u043a\u0430 \u0448\u0430\u043b\u043a\u0435\u0440\u0430",
     "container.smoker": "\u00a77\u041a\u043e\u043f\u0442\u0438\u043b\u044c\u043d\u044f",
