--- a/assets/minecraft/lang/ar_sa.json
+++ b/assets/minecraft/lang/ar_sa.json
@@ -20,14 +20,14 @@
     "container.beacon": "\u00a77\u0645\u0646\u0627\u0631\u0629",
     "container.blast_furnace": "\u00a77\u0641\u0631\u0646 \u0635\u0647\u0631 \u0627\u0644\u0645\u0639\u0627\u062f\u0646",
     "container.brewing": "\u00a77\u0645\u0646\u0636\u062f\u0629 \u0627\u0644\u062a\u062e\u0645\u064a\u0631",
-    "container.cartography_table": "\u00a77\u0637\u0627\u0648\u0644\u0629 \u0627\u0644\u062e\u0631\u0627\u0626\u0637",
+    "container.cartography_table": "\u00a77\u0637\u0627\u0648\u0644\u0629 \u062e\u0631\u0627\u0626\u0637\u064a\u0629",
     "container.chest": "\u00a77\u0635\u0646\u062f\u0648\u0642",
     "container.chestDouble": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0643\u0628\u064a\u0631",
     "container.crafting": "\u00a77\u0635\u0646\u0627\u0639\u0629",
-    "container.creative": "\u00a77\u0627\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u0645\u0627\u062f\u0629",
+    "container.creative": "\u00a77\u0625\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u063a\u0631\u0636",
     "container.dispenser": "\u00a77\u0642\u0627\u0630\u0641",
     "container.dropper": "\u00a77\u0627\u0644\u0642\u0637\u0627\u0631\u0629",
-    "container.enchant": "\u00a77\u062a\u0637\u0648\u064a\u0631 \u0633\u062d\u0631\u064a",
+    "container.enchant": "\u00a77\u0627\u0633\u062d\u0631",
     "container.enderchest": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0627\u0646\u062f\u0631",
     "container.furnace": "\u00a77\u0641\u0631\u0646",
     "container.grindstone_title": "\u00a77\u0625\u0635\u0644\u0627\u062d \u0648 \u0627\u0632\u0627\u0644\u0629 \u0627\u0644\u062a\u0637\u0648\u064a\u0631\u0627\u062a",
@@ -35,7 +35,7 @@
     "container.inventory": "\u00a77\u0627\u0644\u062d\u0642\u064a\u0628\u0629",
     "container.lectern": "\u00a77\u0645\u0646\u0636\u062f\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629",
     "container.loom": "\u00a77\u0645\u0646\u0633\u062c",
-    "container.repair": "\u00a77\u0625\u0635\u0644\u0627\u062d \u0648\u0627\u0633\u0645",
+    "container.repair": "\u00a77\u0625\u0635\u0644\u0627\u062d \u0648\u062a\u0633\u0645\u064a\u0629",
     "container.shulkerBox": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0634\u0644\u0643\u0631",
     "container.smoker": "\u00a77\u0645\u062f\u062e\u0646",
     "container.stonecutter": "\u00a77\u0642\u0627\u0637\u0639 \u0627\u0644\u062d\u062c\u0627\u0631\u0629",
@@ -66,12 +66,12 @@
     "gui.advancements": "\u00a7f\u0627\u0644\u062a\u0642\u062f\u0645",
     "itemGroup.brewing": "\u00a77\u0627\u0644\u062a\u062e\u0645\u064a\u0631",
     "itemGroup.buildingBlocks": "\u00a77\u0643\u062a\u0644 \u0627\u0644\u0628\u0646\u0627\u0621",
-    "itemGroup.combat": "\u00a77\u0623\u0633\u0644\u062d\u0629",
+    "itemGroup.combat": "\u00a77\u0642\u062a\u0627\u0644",
     "itemGroup.decorations": "\u00a77\u0643\u062a\u0644 \u0627\u0644\u0632\u064a\u0646\u0629",
     "itemGroup.food": "\u00a77\u063a\u0630\u0627\u0621",
     "itemGroup.hotbar": "\u00a77\u0623\u0634\u0631\u0637\u0629 \u0627\u0644\u0645\u0647\u0627\u0645 \u0627\u0644\u0645\u062d\u0641\u0648\u0638\u0629",
     "itemGroup.inventory": "\u00a77\u062d\u0642\u064a\u0628\u0629 \u0627\u0644\u0628\u0642\u0627\u0621",
-    "itemGroup.materials": "\u00a77\u0627\u0644\u0645\u0648\u0627\u062f",
+    "itemGroup.materials": "\u00a77\u0645\u0648\u0627\u062f",
     "itemGroup.misc": "\u00a77\u0645\u062a\u0646\u0648\u0639\u0627\u062a",
     "itemGroup.redstone": "\u00a77\u0631\u064a\u062f\u0633\u062a\u0648\u0646",
     "itemGroup.search": "\u00a77\u0623\u063a\u0631\u0627\u0636 \u0627\u0644\u0628\u062d\u062b",
