--- a/assets/minecraft/lang/az_az.json
+++ b/assets/minecraft/lang/az_az.json
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77Shulker Qutusu",
     "container.smoker": "\u00a77T\u00fcst\u00fc sobas\u0131",
     "container.stonecutter": "\u00a77Da\u015f k\u0259sici",
-    "container.upgrade": "\u00a77\u00d6t\u00fcr\u00fcc\u00fc yenil\u0259yin",
+    "container.upgrade": "\u00a77Al\u0259ti inki\u015faf etdir",
     "entity.minecraft.chest_minecart": "\u00a77Sand\u0131ql\u0131 Vaqon",
     "entity.minecraft.horse": "\u00a77At",
     "entity.minecraft.llama": "\u00a77Lama",
