--- a/assets/minecraft/lang/el_gr.json
+++ b/assets/minecraft/lang/el_gr.json
@@ -44,9 +44,9 @@
     "entity.minecraft.horse": "\u00a77\u0386\u03bb\u03bf\u03b3\u03bf",
     "entity.minecraft.llama": "\u00a77\u039b\u03ac\u03bc\u03b1",
     "entity.minecraft.mule": "\u00a77\u039c\u03bf\u03c5\u03bb\u03ac\u03c1\u03b9",
-    "entity.minecraft.skeleton_horse": "\u00a77\u03a3\u03ba\u03b5\u03bb\u03b5\u03c4\u03ad\u03bd\u03b9\u03bf \u0386\u03bb\u03bf\u03b3\u03bf",
-    "entity.minecraft.villager": "\u00a77X\u03c9\u03c1\u03b9\u03ba\u03cc\u03c2",
-    "entity.minecraft.villager.armorer": "\u00a77A\u03c1\u03bc\u03b1\u03c4\u03bf\u03c0\u03bf\u03b9\u03cc\u03c2",
+    "entity.minecraft.skeleton_horse": "\u00a77\u0386\u03bb\u03bf\u03b3\u03bf \u03a3\u03ba\u03b5\u03bb\u03b5\u03c4\u03cc\u03c2",
+    "entity.minecraft.villager": "\u00a77\u03a7\u03c9\u03c1\u03b9\u03ba\u03cc\u03c2",
+    "entity.minecraft.villager.armorer": "\u00a77\u0391\u03c1\u03bc\u03b1\u03c4\u03bf\u03c0\u03bf\u03b9\u03cc\u03c2",
     "entity.minecraft.villager.butcher": "\u00a77\u03a7\u03b1\u03c3\u03ac\u03c0\u03b7\u03c2",
     "entity.minecraft.villager.cartographer": "\u00a77\u03a7\u03b1\u03c1\u03c4\u03bf\u03b3\u03c1\u03ac\u03c6\u03bf\u03c2",
     "entity.minecraft.villager.cleric": "\u00a77\u039a\u03bb\u03b7\u03c1\u03b9\u03ba\u03cc\u03c2",
@@ -57,7 +57,7 @@
     "entity.minecraft.villager.librarian": "\u00a77\u0392\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03b7\u03ba\u03ac\u03c1\u03b9\u03bf\u03c2",
     "entity.minecraft.villager.mason": "\u00a77\u039a\u03c4\u03af\u03c3\u03c4\u03b7\u03c2",
     "entity.minecraft.villager.nitwit": "\u00a77\u0391\u03bd\u03cc\u03b7\u03c4\u03bf\u03c2",
-    "entity.minecraft.villager.none": "\u00a77X\u03c9\u03c1\u03b9\u03ba\u03cc\u03c2",
+    "entity.minecraft.villager.none": "\u00a77\u03a7\u03c9\u03c1\u03b9\u03ba\u03cc\u03c2",
     "entity.minecraft.villager.shepherd": "\u00a77\u0392\u03bf\u03c3\u03ba\u03cc\u03c2",
     "entity.minecraft.villager.toolsmith": "\u00a77\u0395\u03c1\u03b3\u03b1\u03bb\u03b9\u03bf\u03c5\u03c1\u03b3\u03cc\u03c2",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u039f\u03c0\u03bb\u03bf\u03c0\u03bf\u03b9\u03cc\u03c2",
