--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -26,7 +26,7 @@
     "container.crafting": "\u00a77Craftin'",
     "container.creative": "\u00a77Set 'o' loot",
     "container.dispenser": "\u00a77Cannon",
-    "container.dropper": "\u00a77Broken Cannon",
+    "container.dropper": "\u00a77Broken cannon",
     "container.enchant": "\u00a77Cast Magic",
     "container.enderchest": "\u00a77Ender Coffer",
     "container.furnace": "\u00a77Oven",
@@ -34,11 +34,11 @@
     "container.hopper": "\u00a77Object Suckin' Device",
     "container.inventory": "\u00a77Loot bag",
     "container.lectern": "\u00a77Readin' Stand",
-    "container.loom": "\u00a77Sewin' Station",
+    "container.loom": "\u00a77Sewin' station",
     "container.repair": "\u00a77Repair 'n moniker",
     "container.shulkerBox": "\u00a77Shulker Box",
     "container.smoker": "\u00a77Galley Oven",
-    "container.stonecutter": "\u00a77Pebble Chopp'r",
+    "container.stonecutter": "\u00a77Pebble chopp'r",
     "container.upgrade": "\u00a77Strengthen Yer Gear",
     "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubber's boat",
     "entity.minecraft.horse": "\u00a77Brumby",
