--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -63,7 +63,7 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77\u0627\u0633\u0644\u062d\u0647 \u0633\u0627\u0632",
     "entity.minecraft.wandering_trader": "\u00a77\u0645\u0639\u0627\u0645\u0644\u0647 \u06af\u0631 \u0633\u0631\u06af\u0631\u062f\u0627\u0646",
     "entity.minecraft.zombie_horse": "\u00a77\u0627\u0633\u0628 \u0632\u0627\u0645\u0628\u06cc",
-    "gui.advancements": "\u00a7f\u067e\u06cc\u0634\u0631\u0641\u062a \u0647\u0627",
+    "gui.advancements": "\u00a7f\u067e\u06cc\u0634\u0631\u0648\u06cc \u0647\u0627",
     "itemGroup.brewing": "\u00a77\u0645\u0639\u062c\u0648\u0646 \u0633\u0627\u0632\u064a",
     "itemGroup.buildingBlocks": "\u00a77\u0628\u0644\u0648\u06a9 \u0647\u0627\u064a \u0633\u0627\u062e\u062a \u0648 \u0633\u0627\u0632",
     "itemGroup.combat": "\u00a77\u0645\u0628\u0627\u0631\u0632\u0647",
