--- a/assets/minecraft/lang/qya_aa.json
+++ b/assets/minecraft/lang/qya_aa.json
@@ -1,21 +1,22 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Mor\u00eb colca Hyulcero",
-    "block.minecraft.blue_shulker_box": "\u00a77Luin\u00eb colca Hyulcero",
-    "block.minecraft.brown_shulker_box": "\u00a77Varn\u00eb colca Hyulcero",
-    "block.minecraft.cyan_shulker_box": "\u00a77Fanyaluin\u00eb colca Hyulcero",
-    "block.minecraft.gray_shulker_box": "\u00a77Sinda colca Hyulcero",
-    "block.minecraft.green_shulker_box": "\u00a77Laica colca Hyulcero",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Helwa colca Hyulcero",
-    "block.minecraft.light_gray_shulker_box": "\u00a77M\u00eds\u00eb colca Hyulcero",
-    "block.minecraft.lime_shulker_box": "\u00a77Venya colca Hyulcero",
-    "block.minecraft.magenta_shulker_box": "\u00a77Mangenta colca Hyulcero",
-    "block.minecraft.orange_shulker_box": "\u00a77Culuina colca Hyulcero",
-    "block.minecraft.pink_shulker_box": "\u00a77Fanyacarn\u00eb colca Hyulcero",
-    "block.minecraft.purple_shulker_box": "\u00a77Luicarn\u00eb colca Hyulcero",
-    "block.minecraft.red_shulker_box": "\u00a77Carn\u00eb colca Hyulcero",
-    "block.minecraft.shulker_box": "\u00a77Colca Hyulcero",
-    "block.minecraft.white_shulker_box": "\u00a77Ninqu\u00eb colca Hyulcero",
-    "block.minecraft.yellow_shulker_box": "\u00a77Malina colca Hyulcero",
+    "block.minecraft.black_shulker_box": "\u00a77Mor\u00eb colca hyulcero",
+    "block.minecraft.blue_shulker_box": "\u00a77Luin\u00eb colca hyulcero",
+    "block.minecraft.brown_shulker_box": "\u00a77Varn\u00eb colca hyulcero",
+    "block.minecraft.cyan_shulker_box": "\u00a77Fanyaluin\u00eb colca hyulcero",
+    "block.minecraft.gray_shulker_box": "\u00a77Sinda colca hyulcero",
+    "block.minecraft.green_shulker_box": "\u00a77Laica colca hyulcero",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Helwa colca hyulcero",
+    "block.minecraft.light_gray_shulker_box": "\u00a77M\u00eds\u00eb colca hyulcero",
+    "block.minecraft.lime_shulker_box": "\u00a77Venya colca hyulcero",
+    "block.minecraft.magenta_shulker_box": "\u00a77Mangenta colca hyulcero",
+    "block.minecraft.orange_shulker_box": "\u00a77Culuina colca hyulcero",
+    "block.minecraft.pink_shulker_box": "\u00a77Fanyacarn\u00eb colca hyulcero",
+    "block.minecraft.purple_shulker_box": "\u00a77Luicarn\u00eb colca hyulcero",
+    "block.minecraft.red_shulker_box": "\u00a77Carn\u00eb colca hyulcero",
+    "block.minecraft.shulker_box": "\u00a77Colca hyulcero",
+    "block.minecraft.white_shulker_box": "\u00a77Ninqu\u00eb colca hyulcero",
+    "block.minecraft.yellow_shulker_box": "\u00a77Malina colca hyulcero",
+    "container.barrel": "\u00a77Corcolca",
     "container.blast_furnace": "\u00a77Ticutait\u00eb urna",
     "container.chest": "\u00a77Taucolca",
     "container.chestDouble": "\u00a77Hoa taucolca",
@@ -26,14 +27,16 @@
     "container.furnace": "\u00a77Urna",
     "container.inventory": "\u00a77Auri\u00eb",
     "container.repair": "\u00a77Envinyata ar esta",
-    "container.shulkerBox": "\u00a77Colca Hyulcero",
+    "container.shulkerBox": "\u00a77Colca hyulcero",
+    "container.stonecutter": "\u00a77Ondocirma",
     "entity.minecraft.chest_minecart": "\u00a77Rax' as taucolca",
     "entity.minecraft.horse": "\u00a77Rocco",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.skeleton_horse": "\u00a77N\u00e1varocco",
     "entity.minecraft.villager": "\u00a77Opelemo",
     "entity.minecraft.villager.armorer": "\u00a77Varmaro",
-    "entity.minecraft.villager.butcher": "\u00a77Lamannehtar",
+    "entity.minecraft.villager.butcher": "\u00a77Cuimatan",
+    "entity.minecraft.villager.cartographer": "\u00a77Noremmatan",
     "entity.minecraft.villager.cleric": "\u00a77Cordamo",
     "entity.minecraft.villager.farmer": "\u00a77Cemendur",
     "entity.minecraft.villager.fisherman": "\u00a77Lingwimo",
@@ -42,10 +45,11 @@
     "entity.minecraft.villager.librarian": "\u00a77Parmasson",
     "entity.minecraft.villager.mason": "\u00a77Ontamo",
     "entity.minecraft.villager.none": "\u00a77Opelemo",
-    "entity.minecraft.villager.shepherd": "\u00a77M\u00e1mandil",
+    "entity.minecraft.villager.shepherd": "\u00a77Emerro",
     "entity.minecraft.villager.toolsmith": "\u00a77Carmatan",
     "entity.minecraft.villager.weaponsmith": "\u00a77Maicatan",
     "entity.minecraft.zombie_horse": "\u00a77Urcoya rocco",
+    "gui.advancements": "\u00a7fEmpatyeller",
     "itemGroup.brewing": "\u00a77\u00d3quantal\u00eb",
     "itemGroup.buildingBlocks": "\u00a77Ronwar carastal\u00ebo",
     "itemGroup.combat": "\u00a77Mahti\u00eb",
